Finished most endpoints in rough state
