# swagger.yaml
@@ -174,6 +174,20 @@ paths:
         200:
           schema:
             $ref: '#/components/schemas/RiderList'
+    post:
+      tags:
+        - races
+      description: Add a new checkpoint
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#todo'
+      responses:
+        200:
+          schema:
+            $ref: #todo
   /trackers:
     post:
       tags:
